Se creo la vista del modulo de sucursales

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 VUE_APP_WELCOME=Bienvenidos
 VUE_APP_API_URL=http://03c0d50bfad5.ngrok.io
+
+VUE_APP_ICON_EDIT=mdi-pencil
+VUE_APP_ICON_DELETE=mdi-delete
+VUE_APP_ICON_DETAILS=mdi-book-open-variant
