--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-toastification": "^1.7.11",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0",
+    "vuetify-confirm": "^2.0.6",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
