--- a/.env
+++ b/.env
@@ -1,6 +1,14 @@
 VUE_APP_WELCOME=Bienvenidos
 VUE_APP_API_URL=http://192.168.0.105:8000
 
+VUE_APP_ICON_MONEY=mdi-currency-usd
+
 VUE_APP_ICON_EDIT=mdi-pencil
 VUE_APP_ICON_DELETE=mdi-delete
 VUE_APP_ICON_DETAILS=mdi-book-open-variant
+
+VUE_APP_LOCALE=pt-BR
+VUE_APP_PREFIX=
+VUE_APP_SUFFIX=
+VUE_APP_LENGTH=10
+VUE_APP_PRECISION=0
