Created crud to product module

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_WELCOME=Bienvenidos
-VUE_APP_API_URL=http://192.168.0.105:8000
+VUE_APP_API_URL=http://5b0aa41cdb6a.ngrok.io
 
 VUE_APP_ICON_MONEY=mdi-currency-usd
 
