--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_WELCOME=Bienvenidos
-VUE_APP_API_URL=http://8ec7-2800-e2-d80-85a-6d24-3252-c980-825e.ngrok.io
+VUE_APP_API_URL=http://192.168.0.104:8000
 
 VUE_APP_ICON_EDIT=mdi-pencil
 VUE_APP_ICON_DELETE=mdi-delete
