--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_WELCOME=Bienvenidos
-VUE_APP_API_URL=http://cf1c-191-92-230-39.ngrok.io
+VUE_APP_API_URL=http://cb3d-191-92-230-39.ngrok.io
 
 VUE_APP_ICON_EDIT=mdi-pencil
 VUE_APP_ICON_DELETE=mdi-delete
