--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_WELCOME=Bienvenidos
-VUE_APP_API_URL=http://aa15-2800-e2-d80-21f1-b5d4-47e8-9bbd-3673.ngrok.io
+VUE_APP_API_URL=http://192.168.0.104:8000
 
 VUE_APP_ICON_EDIT=mdi-pencil
 VUE_APP_ICON_DELETE=mdi-delete
