Se testearon todas las funcionalidades del sistema y se corriguieron algunos errores

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_WELCOME=Bienvenidos
-VUE_APP_API_URL=http://192.168.0.104:8000
+VUE_APP_API_URL=http://67cb-2800-e2-d80-21f1-a8ab-e318-fbf3-4073.ngrok.io
 
 VUE_APP_ICON_EDIT=mdi-pencil
 VUE_APP_ICON_DELETE=mdi-delete
