Se organizaron los testigos para la tabla de lodgings

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_WELCOME=Bienvenidos
-VUE_APP_API_URL=http://localhost:8000
+VUE_APP_API_URL=http://7045-2800-e2-d80-1d7-9842-d7b6-a9e1-6124.ngrok.io
 
 VUE_APP_ICON_EDIT=mdi-pencil
 VUE_APP_ICON_DELETE=mdi-delete
