--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_WELCOME=Bienvenidos
-VUE_APP_API_URL=http://localhost:8000
+VUE_APP_API_URL=http://d896-2800-e2-d80-1d7-81ce-cde7-81cd-edde.ngrok.io
 
 VUE_APP_ICON_EDIT=mdi-pencil
 VUE_APP_ICON_DELETE=mdi-delete
