--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_WELCOME=Bienvenidos
-VUE_APP_API_URL=http://0eba-2800-e2-d80-2357-54f4-7430-a433-ff6b.ngrok.io
+VUE_APP_API_URL=http://ab91-191-92-230-39.ngrok.io
 
 VUE_APP_ICON_EDIT=mdi-pencil
 VUE_APP_ICON_DELETE=mdi-delete
