Add new library to manipulate the date and time. And prepare front to liquidation departure lodging.

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@mdi/font": "5.9.55",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vue-toastification": "^1.7.11",
     "vuelidate": "^0.7.6",
