--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_WELCOME=Bienvenidos
-VUE_APP_API_URL=https://ninnaytato.ga
+VUE_APP_API_URL=http://localhost:8000
 
 VUE_APP_ICON_EDIT=mdi-pencil
 VUE_APP_ICON_DELETE=mdi-delete
