--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "gantt-elastic": "^1.0.12",
+    "gantt-elastic-header": "^0.1.11",
     "moment": "^2.29.1",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
