modulo de alertas WIP

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_WELCOME=Bienvenidos
-VUE_APP_API_URL=http://localhost:8000
+VUE_APP_API_URL=http://d8ea-2800-e2-d80-1036-b049-cc3b-f7d-b0d2.ngrok.io
 
 VUE_APP_ICON_EDIT=mdi-pencil
 VUE_APP_ICON_DELETE=mdi-delete
