--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "apexcharts": "^3.33.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "gantt-elastic": "^1.0.12",
@@ -16,6 +17,7 @@
     "moment": "^2.29.1",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.2",
     "vue-axios": "^3.2.4",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
