cambio de dominio para el consumo de apis

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_WELCOME=Bienvenidos
-VUE_APP_API_URL=https://app.ninnaytato.com
+VUE_APP_API_URL=https://app.dogdccontrol.com
 
 VUE_APP_ICON_EDIT=mdi-pencil
 VUE_APP_ICON_DELETE=mdi-delete
